[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "HyperBench"
version = "0.1.2.7"
authors = [
    {name = "Giovanni Semioli", email = "g.semioli1@studenti.unisa.it"}
]
readme = "README.md"
dependencies = [
    "gdown>=5.2.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=1.13.0",
    "torch-geometric>=2.6.1",
]
requires-python = ">=3.9"

[project.scripts]
pipeline = "hyperbench.pipelines.pipeline:execute"
pipeline_with_batch = "hyperbench.pipelines.pipeline_with_batch:execute"

[project.urls]
Homepage = "https://www.isislab.it/"
Repository = "https://github.com/hypernetwork-research-group/hypernegative"
"Issue Tracker" = "https://github.com/hypernetwork-research-group/hypernegative/issues"
